force-app/main/default/objects/Checklist_Tarefa__c/Checklist_Tarefa__c.object-meta.xml
<CustomObject>
    <label>Checklist Tarefa</label>
    <nameField>
        <label>Nome de Checklist Tarefas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Tarefas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>