force-app/main/default/objects/Checklist_Tarefa__c/fields/Cartao_Trello__c.field-meta.xml
<CustomField>
    <fullName>Cartao_Trello__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cartão Trello</label>
    <referenceTo>cartaoTrello__c</referenceTo>
    <relationshipLabel>Checklist Tarefas</relationshipLabel>
    <relationshipName>Checklist_Tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>