force-app/main/default/objects/Checklist_Tarefa__c/fields/concluido__c.field-meta.xml
<CustomField>
    <fullName>concluido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concluído</label>
    <type>Checkbox</type>
</CustomField>