force-app/main/default/objects/Checklist_Tarefa__c/fields/Id_Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Id_Tarefa__c</fullName>
    <label>Id Tarefa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>